[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uma-perm"
version = "0.1.0"
description = "Parallel intralayer permutation generator with UMA-S-1p1 screening"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "numpy>=1.23",
  "ase>=3.22",
  "torch>=2.0",
  "fairchem-core",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.0",
]

dev = [
  "black",
  "ruff",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uma_perm*"]
